// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component >> Icon Button icon Should render icon with button 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={16}
    bbWidth={16}
    fill="#000"
    focusable={false}
    height={16}
    meetOrSlice={0}
    minX={0}
    minY={0}
    secondaryFill={null}
    secondaryOpacity={0.4}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    testID="test-icon"
    vbHeight={512}
    vbWidth={320}
    width={16}
  >
    <RNSVGGroup
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
        fill={4278190080}
        fillOpacity={1}
        propList={
          Array [
            "fill",
            "fillOpacity",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`component >> Icon Default icon Should render icon correctly 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  fill="#000"
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  secondaryFill={null}
  secondaryOpacity={0.4}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  testID="test-icon"
  vbHeight={512}
  vbWidth={320}
  width={16}
>
  <RNSVGGroup
    fill={4278190080}
    propList={
      Array [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
      fill={4278190080}
      fillOpacity={1}
      propList={
        Array [
          "fill",
          "fillOpacity",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
